tests/samples/valid/wasm4_memset.pn
const FRAMEBUFFER: &[6400]u8 = 0xa0;

fn memset()
{
    var i = 0;
    var value = 3 | (3 << 2) | (3 << 4) | (3 << 6);
    {
        if i == |FRAMEBUFFER|
            goto end;
        FRAMEBUFFER[i] = value;
        i = i + 1;
        loop;
    }
    end:
}
