tests/samples/invalid/bitshift_binary_expression.pn
fn main()
{
	var x = 1 + 2 << 3;
}
